@@ -629,6 +629,14 @@
         GET: [
           "account/settings",
           "account/verify_credentials",
+          "account_activity/all/:env_name/subscriptions",
+          "account_activity/all/:env_name/subscriptions/list",
+          "account_activity/all/:env_name/webhooks",
+          "account_activity/all/webhooks",
+          "account_activity/subscriptions/count",
+          "account_activity/webhooks",
+          "account_activity/webhooks/:webhook_id/subscriptions/all",
+          "account_activity/webhooks/:webhook_id/subscriptions/all/list",
           "application/rate_limit_status",
           "blocks/ids",
           "blocks/list",
@@ -707,6 +715,10 @@
           "account/update_profile_banner",
           "account/update_profile_colors",
           "account/update_profile_image",
+          "account_activity/all/:env_name/subscriptions",
+          "account_activity/all/:env_name/webhooks",
+          "account_activity/webhooks",
+          "account_activity/webhooks/:webhook_id/subscriptions/all",
           "blocks/create",
           "blocks/destroy",
           "collections/create",
