@@ -14,6 +14,7 @@ codebird-js - changelog
 + #116 Update GET statuses/oembed with new endpoint
 + Support POST media/upload with media_data base64
 - Fix check for require for webpack compatibility
++ Add Account Activity API methods
 
 2.6.0 (2015-04-08)
 + Allow to get the supported API methods as array
